# secugen_lib

./: README.md  pubspec.yaml
lib/: secugen_lib.dart  secugen_lib_method_channel.dart  secugen_lib_platform_interface.dart
lib/src/: native_lib.dart
windows/: CMakeLists.txt  secugen_lib_plugin.cpp  secugen_lib_plugin.h  secugen_lib_plugin_c_api.cpp
windows/include/secugen_lib/: secugen_lib_plugin_c_api.h
windows/src/: secugen_lib.cpp  sgfplib.h  sgfplib_c_wrapper.cpp  sgfplib_c_wrapper.h
windows/test/: secugen_lib_plugin_test.cpp
